Add blog and test post

--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,9 @@ defaults:
       path: ""
     values:
       layout: "default"
+  -
+    scope:
+      type: "posts"
+    values:
+      layout: "post"
+      permalink: /blog/:year/:month/:day/:title/
