--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,8 @@ defaults:
       path: ""
     values:
       layout: "default"
+  -
+    scope:
+      path: "styleguide"
+    values:
+      layout: "single"
