Fix doc reference

--- a/.forestry/front_matter/templates/blog.yml
+++ b/.forestry/front_matter/templates/blog.yml
@@ -30,7 +30,7 @@ fields:
     options: []
     source:
       type: pages
-      section: authors
+      section: categories
       file: 
       path: 
   label: Category
