--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ defaults:
     values:
       layout: "post"
       permalink: /blog/:year/:month/:day/:title/
+      sitemap: false
   -
     scope:
       path: ''
@@ -40,6 +41,7 @@ defaults:
       permalink: "/blogs/author/:title/"
       layout: authors
       image: /img/profile-pic.png
+      sitemap: false
   -
     scope:
       path: ''
@@ -47,3 +49,4 @@ defaults:
     values:
       permalink: "/blogs/category/:title/"
       layout: categories
+      sitemap: false
