--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,19 @@ social:
 # Build settings
 markdown: kramdown
 plugins:
+  - jekyll-feed
   - jekyll-menus
+  - jekyll-paginate-v2
   - jekyll-seo-tag
   - jekyll-sitemap
+pagination:
+  enabled: true
+  per_page: 10
+  permalink: '/:num/'
+  title: ':title - page :num'
+  limit: 0
+  sort_field: 'date'
+  sort_reverse: true
 
 collections:
   authors:
