--- a/_config.yml
+++ b/_config.yml
@@ -27,18 +27,25 @@ plugins:
 pagination:
   enabled: true
   per_page: 10
-  permalink: '/:num/'
-  title: ':title - page :num'
+  permalink: "/:num/"
+  title: ":title - page :num"
   limit: 0
-  sort_field: 'date'
+  sort_field: "date"
   sort_reverse: true
-
+autopages:
+  enabled: true
+  title: ':cat Posts'
+  categories:
+    layouts:
+      - 'categories.html'
+    permalink: "/blogs/category/:cat/"
+  collections:
+    enabled: false
+  tags:
+    enabled: false
 collections:
   authors:
     title: Authors
-    output: true
-  categories:
-    title: Categories
     output: true
 
 defaults:
@@ -57,18 +64,10 @@ defaults:
       sitemap: false
   -
     scope:
-      path: ''
+      path: ""
       type: authors
     values:
       permalink: "/blogs/author/:title/"
       layout: authors
       image: /img/profile-pic.png
-      sitemap: false
-  -
-    scope:
-      path: ''
-      type: categories
-    values:
-      permalink: "/blogs/category/:title/"
-      layout: categories
       sitemap: false
