EST-26: Blog page cards / featured and fixes

--- a/_config.yml
+++ b/_config.yml
@@ -60,3 +60,4 @@ defaults:
       layout: "post"
       permalink: /blog/:year/:month/:day/:title/
       sitemap: false
+      image: "/img/default-blog.jpg"
