EST-67: Update logos, buttons, schedule demo changes

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ twitter:
   username: EsteemedTalent
 facebook:
   publisher: Esteemed-106526290944059
-logo: /img/esteemed-bw-logo.png
+logo: /img/esteemed-bw-logo.svg
 social:
   links:
     - https://www.facebook.com/Esteemed-106526290944059/
