--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -28,7 +28,7 @@ matthew-pritchard:
     alike. Let''s connect at m.pritchard@esteemed.io. '
 gloria-tucker: 
   name: Gloria Tucker
-  image: "/image/gloria-tucker.jpg"
+  image: "/img/gloria-tucker.jpg"
   bio: 'Gloria is an ambitious senior backend web developer who specializes in Drupal and is passionate 
     about open-source software and government web projects. In her spare time, she enjoys her family, 
     having fun with friends, and reading literature. '
