--- a/.github/workflows/spellcheck.yml
+++ b/.github/workflows/spellcheck.yml
@@ -11,7 +11,15 @@ jobs:
     strategy:
       fail-fast: false
     steps:
-    - uses: actions/checkout@master
-    - uses: rojopolis/spellcheck-github-actions@0.5.0
-      name: Check Spelling
-
+      - uses: actions/checkout@v2
+      - name: Cache gems
+        id: bundler-cache
+        uses: actions/cache@v2
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-gems-
+      - uses: lemonarc/jekyll-action@1.0.0
+      - uses: rojopolis/spellcheck-github-actions@0.5.0
+        name: Check Spelling
