--- a/spellcheck.yaml
+++ b/spellcheck.yaml
@@ -12,5 +12,5 @@ matrix:
           - code
           - pre
     sources:
-      - '**/*.md'
+      - '_site/**/*.html'
     default_encoding: utf-8
