[ES-75] Update metadata

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Collaborative Staffing to grow your Business - Esteemed"
+title: "Esteemed.io"
 description: "Scale your business with speed and confidence with trusted colleagues from the Esteemed Talent Network. Made up of over 13,000 digital professionals. The first and only integrated staffing and collaboration solution delivered through your existing communications platforms."
 url: "https://esteemed.io"
 email: service@esteemed.io
@@ -25,7 +25,7 @@ plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
 author_dir: "blog/author"
-author_title_prefix: "Blog - By "
+author_title_suffix: ""
 pagination:
   enabled: true
   per_page: 10
@@ -52,7 +52,7 @@ defaults:
       path: ""
     values:
       layout: "default"
-      image: "/img/esteemed-main-meta.png"
+      image: "/img/main-esteemed.png"
   -
     scope:
       type: "posts"
