--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,34 +1,39 @@
 ---
 casey-horgan:
   name: Casey Horgan
-  image: "/img/casey-horgan.jpg"
+  profile_image: "/img/casey-horgan.jpg"
+  image_meta: "/img/casey-horgan-meta.png"
   bio: Casey Horgan is an experienced editor, B2B content marketer, and wordsmith.
     Her talents include SEO, content creation, marketing research, and graphic design.
     When she's not writing, she studies primary source documents at the Accademia
     di Merano's Ezra Pound Research Center in northern Italy.
 kelton-reid:
   name: Kelton Reid
-  image: "/img/kelton-reid.jpg"
+  profile_image: "/img/kelton-reid.jpg"
+  image_meta: "/img/kelton-reid-meta.png"
   bio: Kelton Reid is an independent podcast producer, writer, mediaphile, and the
     former VP of Multimedia Production for Copyblogger. Find out how great writers
     keep the cursor moving on his podcast [The Writer Files](https://writerfiles.libsyn.com/),
     and connect with Kelton on [Twitter](https://twitter.com/KeltonReid).
 m-shakaib-zafar:
   name: M Shakaib Zafar
-  image: "/img/m-shakaib-zafar.jpg"
+  profile_image: "/img/m-shakaib-zafar.jpg"
+  image_meta: "/img/m-shakaib-zafar.jpg"
   bio: M Shakaib Zafar is a Software Engineer at Programmers Force. He creates diverse
     and attention-caching websites for a variety of clients. Having won the Young
     Developer Award twice, his services have been solicited by companies including
     Programmers Force (ISO Certified) and Gertrude Marketers.
 matthew-pritchard:
   name: Matthew Pritchard
-  image: "/img/matthew-pritchard.jpg"
+  profile_image: "/img/matthew-pritchard.jpg"
+  image_meta: "/img/matthew-pritchard-meta.png"
   bio: 'Matthew Ellis Pritchard is a digital content marketer and Esteemed Talent
     Network member, creating useful content for agency-owners, businesses and freelancers/contractors
     alike. Let''s connect at m.pritchard@esteemed.io. '
 gloria-tucker: 
   name: Gloria Tucker
-  image: "/img/gloria-tucker.jpg"
-  bio: 'Gloria is an ambitious senior backend web developer who specializes in Drupal and is passionate 
+  profile_image: "/img/gloria-tucker.jpg"
+  image_meta: "/img/gloria-tucker.jpg"
+  bio: 'Gloria is an ambitious senior backend web developer who specializes in Drupal and is passionate
     about open-source software and government web projects. In her spare time, she enjoys her family, 
     having fun with friends, and reading literature. '
