Add gem: jekyll-redirect-from

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ plugins:
   - jekyll-feed
   - jekyll-menus
   - jekyll-paginate-v2
+  - jekyll-redirect-from
   - jekyll-seo-tag
   - jekyll-sitemap
 author_dir: "blog/author"
