Add flag for contact form display

--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,7 @@ defaults:
     values:
       layout: "default"
       image: "/img/main-esteemed.png"
+      contact_form: true
   -
     scope:
       type: "posts"
