[EST-106] Add Jessica as author

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -16,6 +16,13 @@ casey-horgan:
     Her talents include SEO, content creation, marketing research, and graphic design.
     When she's not writing, she studies primary source documents at the Accademia
     di Merano's Ezra Pound Research Center in northern Italy.
+jessica-devine:
+  name: Jessica Devine
+  profile_image: "/img/jessica-devine.jpg"
+  image_meta: "/img/jessica-devine.jpg"
+  bio: "Jessica Devine is a Full Stack developer, WordPress expert, and Social Media Manager.
+  With an eye for design and user experience, she works with business owners to help them win online.
+  On the WP Contractors blog, she enjoys writing about how to improve your WordPress site with tips and tools."
 kelton-reid:
   name: Kelton Reid
   profile_image: "/img/kelton-reid.jpg"
