[EST-100] Change main meta image
[EST-100] Update image

[EST-100] Update image size

--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ defaults:
       path: ""
     values:
       layout: "default"
-      image: "/img/main-esteemed.png"
+      image: "/img/main-esteemed.jpg"
       contact_form: true
   -
     scope:
